[Sravan Kumar] Refactored . Lamda expression Problems